# TMC26_Stackelberg_Code

./: CLAUDE.md  PROGRESS.md  README.md  TMC26_Stackelberg.tex  pyproject.toml  review.md  sitecustomize.py
.claude/: settings.local.json
configs/: _tmp_c5_paper_iterative_pricing_q16.toml  _tmp_c5_paper_iterative_pricing_q16_gain_max.toml  _tmp_c5_paper_iterative_pricing_q16_gain_min.toml  _tmp_c5_paper_iterative_pricing_q16_nsp_first.toml  _tmp_c5_paper_iterative_pricing_q32.toml  _tmp_c5_paper_iterative_pricing_q64.toml  _tmp_c5_paper_iterative_pricing_q8.toml  _tmp_default_paper_iterative_pricing.toml  default.toml  final_touchup_fast.toml  plot_pbdr_trajectory_from_heatmap_csv.toml  run_algorithm2_exploitability_vs_users.toml  run_stage1_price_heatmaps.toml  run_stage2_approximation_ratio.toml  stage1_fast_diag.toml  stage1_fast_diag_fullsearch.toml  stage1_fig6_extdomain.toml  stage1_fig6_extdomain_topk2.toml  stage1_fig6_extdomain_topk2_init001.toml  stage1_fig6_variant_fullsearch.toml
docs/: BASELINE_IMPLEMENTATION_AUDIT.md  BASELINE_SCRIPT_MAPPING.md  CHANGE_PLAN.md  DEV.md  EXPERIMENT_GAP_FIX_REPORT.md  FIG6_STAGE1_CONVERGENCE_REPORT.md  FIG6_STARTPOINT_EXPLANATION.md  FIGURE_SCRIPT_BLUEPRINT.md  FINAL_CONSISTENCY_AUDIT.md  OUTPUT_SCHEMA.md  PLAN_2026-03-07.md  PLAN_strategic_baselines_2026-03-07.md  PROGRESS.md  SPEC.md  SPEC_RUN_PROGRESS_2026-03-08.md  STAGE1_CONVERGENCE_ALIGNMENT_REPORT.md  STAGE1_CONVERGENCE_FIX_VALIDATION_2026-03-09.md  STAGE1_GAP_ALIGNMENT_REPORT.md  STAGE1_NEIGHBORHOOD_FULLSEARCH_REPORT.md  STAGE1_PRICING_AUDIT.md  STAGE2_SCM_AUDIT.md  (+6 more)
(+533 files in other folders)
