[project]
name = "tmc26-stackelberg-exp"
version = "0.1.0"
description = "Minimal experiment infrastructure for TMC26 Stackelberg paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "scipy>=1.17.1",
  "tomli>=2.0.1; python_version < '3.11'",
  "gekko>=1.0.6",
]

[project.scripts]
tmc26-exp = "tmc26_exp.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/tmc26_exp"]
